--- a/style.css
+++ b/style.css
@@ -19,3 +19,24 @@ body {
     bottom: 5px;
     
 }
+.no {
+    text-decoration: none;
+    background-image: linear-gradient(45deg, rgb(255, 94, 0) ,red);
+    padding: 10px;
+    color: white;
+    border-radius: 5px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 20px;
+    position: absolute;
+    bottom: 5px;
+    right: 1px;
+    font-weight: 700;
+    
+}
+#smex {
+    position: absolute;
+    bottom: 40px;
+    right: 1px;
+    
+
+}
